[gd_scene load_steps=7 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://score_hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/music.ogg" type="AudioStream" id=5]
[ext_resource path="res://sprites/go_home.png" type="Texture" id=6]

[node name="game" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="score_hud" parent="." instance=ExtResource( 3 )]

[node name="restart_button" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 203.453
margin_top = 421.636
margin_right = 415.453
margin_bottom = 627.636
custom_fonts/font = ExtResource( 4 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="powerup_timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="powerup_timer" to="." method="_on_powerup_timer_timeout"]
